[Frontend] Avoid settings button border width mismatch
At zoom levels where CSS pixels correspond to fractional device pixels
(including high-DPI displays), integer rounding could cause
misalignment of the inner edges of the settings button's and popup's
borders. This is fixed by increasing the (nonzero parts of the) border
width of .settings.visible. As a side effect, the outline of the
settings button now extends outside the settings popup when the popup
is open.

A follow-up issue is that, because of the same integer rounding, the
settings icon may slightly change its position between the popup-visible
and popup-hidden states. A more complex fix may be required.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -734,11 +734,11 @@ a.room-name .staging {
 
 .settings.visible {
   position: absolute;
-  top: 2px;
-  right: 3px;
+  top: 1px;
+  right: 2px;
   border-radius: 0;
-  border-width: 1px 1px 0 0;
-  padding: 1px 1px 2px 2px;
+  border-width: 2px 2px 0 0;
+  padding: 0px 0px 3px 3px;
   box-shadow: none;
   z-index: 25;
 }
